--- a/Notebook/Churn.ipynb
+++ b/Notebook/Churn.ipynb
@@ -4600,8 +4600,13 @@
    "source": [
     "## CONCLUSION\n",
     "\n",
-    "Our analysis revealed that the most significant factors influencing customer churn are the level of customer engagement and payment behavior. Specifically, the number of service interactions—whether through calls, emails, or chats—plays a crucial role in understanding customer needs and satisfaction. Additionally, the frequency of late payments serves as a strong indicator of potential churn, as customers who consistently delay payments may be at a higher risk of discontinuing their service. Lastly, the amount of time a customer spends on the company website provides valuable insights into their level of interest and engagement with the brand. By focusing on these key features, we can develop more effective strategies to improve customer retention and enhance overall satisfaction."
+    "Our analysis revealed that we picked Decision Tree model has our model due tpo the fact that it has a very high accuracy store after tuning the parameters, also the most significant factors influencing customer churn are the level of customer engagement and payment behavior. Specifically, the number of service interactions—whether through calls, emails, or chats—plays a crucial role in understanding customer needs and satisfaction. Additionally, the frequency of late payments serves as a strong indicator of potential churn, as customers who consistently delay payments may be at a higher risk of discontinuing their service. Lastly, the amount of time a customer spends on the company website provides valuable insights into their level of interest and engagement with the brand. By focusing on these key features, we can develop more effective strategies to improve customer retention and enhance overall satisfaction."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
